# license-plate-verification-warning-system

./: CMakeLists.txt  README.md  gen_registered.cpp  key.txt  main.cpp  registered (all).txt  registered.txt
doc/: slide.pptx
example/: benchmark.cpp  makefile  run.sh
lib/: prepare.sh
sound/: a.out  try.c
